--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				width: 125px;
 				background: #444;
 				border-radius: 5px;
+				padding-bottom: 2px;
 			}
 			.model-cell .name {
 				text-align: center;
@@ -36,6 +37,10 @@
 				width: 125px;
 				height: 200px;
 				cursor: pointer;
+			}
+			.model-cell hr {
+				margin-top: -4px;
+				margin-bottom: 2px;
 			}
 			
 			#model-popup-bg {
