update models and script
added a method to generate a model list for the TooManyPolys plugin

--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
 		
 		<div style="clear:both"></div>
 		<hr>
-		<small class="last-update-time" title="Last time I downloaded stuff from GameBanana and uploaded here">Last updated: October 14, 2020</small>
+		<small class="last-update-time" title="Last time I downloaded stuff from GameBanana and uploaded here">
+			Last updated: December 10, 2020
+		</small>
 		<br>
 		
 		<script type='text/javascript'>
