show the border between the model and its details

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 			
 			#model-popup .render {
 				float: left;
+				line-height: 0;
 			}
 			
 			#model-popup .details {
@@ -97,6 +98,7 @@
 				width: calc(100% - 500px);
 				box-sizing: border-box;
 				padding-left: 10px;
+				background: #333;
 			}
 			
 			#model-popup .details-header {
@@ -198,6 +200,7 @@
 				top: -10px;
 				left: 10px;
 				font-size: 1em;
+				line-height: initial;
 			}
 			@-webkit-keyframes load4 {
 			  0%,
