--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 				width: calc(100% - 100px);
 				max-width: 1400px;
 				min-width: 500px;
+				border: 10px solid rgb(48, 52, 54);
+				border-radius: 4px;
 			}
 			#model-popup img {
 				position: absolute;
@@ -98,7 +100,8 @@
 				width: calc(100% - 500px);
 				box-sizing: border-box;
 				padding-left: 10px;
-				background: #333;
+				background: rgb(26, 28, 29);
+				border-left: 10px solid rgb(48, 52, 54);
 			}
 			
 			#model-popup .details-header {
