--- a/about.html
+++ b/about.html
@@ -22,10 +22,17 @@
 				display: block;
 				text-align: center;
 				margin: 0 auto;
+				width: max-content;
 			}
 			.about-text {
 				margin: 0 auto;
 				max-width: 600px;
+			}
+			a:link {
+				color: #6baff8;
+			}
+			a:visited {
+				color: #6d7bc6;
 			}
 		</style>
 	</head>
