--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				display: block;
 				text-align: center;
 				margin: 0 auto;
+				width: max-content;
 			}
 			.last-update-time {
 				display: block;
@@ -204,6 +205,12 @@
 				left: 10px;
 				font-size: 1em;
 				line-height: initial;
+			}
+			a:link {
+				color: #6baff8;
+			}
+			a:visited {
+				color: #6d7bc6;
 			}
 			@-webkit-keyframes load4 {
 			  0%,
