add note on duplicate models

--- a/about.html
+++ b/about.html
@@ -11,12 +11,15 @@
 				max-width: 1450px;
 				margin: 0 auto;
 				background: #222;
-				color: #eee;
+				color: #ddd;
 				font-family: sans-serif;
 			}
 			h1 {
 				text-align: center;
 				margin-bottom: 5px;
+			}
+			h2 {
+				color: #f88;
 			}
 			.about-link {
 				display: block;
@@ -62,8 +65,10 @@
 				I want to add a model uploader here eventually, but until then I'm just gonna copy stuff from <a href="https://gamebanana.com/skins/games/54">GameBanana</a> every few months or so.
 			</p>
 			
+			<h2>Model Names</h2>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;-w00tguy
+				A lot of people copy-paste models and then rename them. These models then get included in packs and distributed.
+				Because of this, I don't know if any of the model names here are correct. Let me (w00tguy) know if a model name is wrong and I'll fix it.
 			</p>
 			
 			<h2>Links</h2>
