add wireframe option and update models

--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
 						<input type="checkbox" id="cl_himodels" checked>
 						<label for="cl_himodels" title="Render the HD submodel">cl_himodels 1</label>
 					</div>
+					<input type="checkbox" id="wireframe">
+					<label for="wireframe" title="Outline polygon edges">Wireframe</label>
 					<br>
 					<span>Sequence: </span> <select class="animations"></select>					
 				</div>
@@ -340,7 +342,7 @@
 		<div style="clear:both"></div>
 		<hr>
 		<small class="last-update-time" title="Last time I downloaded stuff from GameBanana and uploaded here">
-			Last updated: May 28, 2021
+			Last updated: May 29, 2021
 		</small>
 		<br>
 		
