--- a/index.html
+++ b/index.html
@@ -416,13 +416,13 @@
 			<div class="details">
 				<h2 class="details-header">Header text</h2>
 				<div class="details-table">
-					<div><div>Polygons:</div><div class="poly-cell"><img class="polyflame" src="flamingline.gif"/><span class="polycount">???</span></div></div>
-					<div><div>Size:</div><div class="filesize">???</div></div>
-					<div><div>Compiled Name:</div><div class="compilename">???</div></div>
-					<div><div>Animated Mouth:</div><div class="has_mouth">???</div></div>
-					<div><div>External Models:</div><div class="ext_mdl">???</div></div>
-					<div><div>MD5:</div><div class="md5">???</div></div>
-					<div class="sound_table_row"><div>Sounds:</div><div class="sounds">???</div></div>					
+					<div><div title="More polys = worse in-game performance.">Polygons:</div><div class="poly-cell"><img class="polyflame" src="flamingline.gif"/><span class="polycount">???</span></div></div>
+					<div><div title="Exludes the preview image size and animation sounds">Size:</div><div class="filesize">???</div></div>
+					<div><div title="The name this model had when it was compiled.">Internal Name:</div><div class="compilename">???</div></div>
+					<div><div title="Some models have mouths that move when the player is using voice chat.">Animated Mouth:</div><div class="has_mouth">???</div></div>
+					<div><div title="Some models store textures and animations in separate model files.">External Models:</div><div class="ext_mdl">???</div></div>
+					<div><div title="Hash result after merging external models, if they exist.">MD5:</div><div class="md5">???</div></div>
+					<div class="sound_table_row"><div title="Some models play sounds during animations.">Sounds:</div><div class="sounds">???</div></div>					
 				</div>
 				<div class="model-controls">
 					<input type="checkbox" id="3d_on" checked>
