--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 		
 		<div class="filter-types">
 			<input type="checkbox" id="filter_ver">
-			<label for="filter_ver" title="Show only the latest version for each model. This only works for models that use the '_v2' style suffixes">Hide old versions</label>
+			<label for="filter_ver" title="Show only the latest version for each model. This only works for models that use the '_v2' style suffixes. Modellers sometimes use '_v2' for different clothes/colors, too.">Hide old versions</label>
 		</div>
 		<div class="filter-search">
 			<span class="search-text"><input id="name-filter" type="text" placeholder="Search..."/></span>
