remove debug stuff

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 		<script type="text/javascript" src="modeldb.js"></script>
 		<script async type="text/javascript" src="hlms.js"></script>
 	</head>
-	<textarea id="debug"></textarea>
+	<!-- <textarea id="debug"></textarea> -->
 	
 	<body>
 		<h1>Sven Co-op Model Database</h1>
