search matches models in groups
and allow searching within groups

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 				color: white;
 			}
 			
-			.model-group-name {
+			.model-group-count {
 				background: #6af;
 				position: absolute;
 				padding: 0 5px;
@@ -442,7 +442,7 @@
 		</div>
 		
 		<div id="model-cell-template">
-			<div class="model-group-name hidden">+<span class="group-count"></span> models</div>
+			<div class="model-group-count hidden"></div>
 			<img/>
 			<hr>
 			<div class="name"></div>
