show model aliases and add tooltips

--- a/index.html
+++ b/index.html
@@ -464,14 +464,15 @@
 				<div class="details-table">
 					<div><div title="More polys = worse in-game performance.">Polygons:</div><div class="poly-cell"><img class="polyflame" src="flamingline.gif"/><span class="polycount">???</span></div></div>
 					<div><div title="Size exluding the preview image size and animation sounds">Size:</div><div class="filesize">???</div></div>
-					<div><div title="The name this model had when it was compiled.">Internal Name:</div><div class="compilename">???</div></div>
 					<div><div title="Whether or not the mouth/head moves when using voice chat.">Animated Mouth:</div><div class="has_mouth">???</div></div>
 					<div><div title="Whether or not textures and animations are stored in separate model files.">External Models:</div><div class="ext_mdl">???</div></div>
 					<div><div title="Hash result after merging external models, if they exist.">MD5:</div><div class="md5">???</div></div>
+					<div><div title="The name this model had when it was compiled.">Internal Name:</div><div class="compilename">???</div></div>
+					<div><div title="Other names that this model has been distributed with. Server owners have been known to rename models. I'll also rename a newly released model if the author's intended name is already in use.">Known Aliases:</div><div class="aliases">???</div></div>
 					<div class="sound_table_row"><div title="Sounds that play during animations.">Sounds:</div><div class="sounds">???</div></div>					
 				</div>
 				<div class="model-controls">
-					<input type="checkbox" id="3d_on" checked>
+					<input type="checkbox" id="3d_on">
 					<label for="3d_on" title="Enable the 3D model renderer">Render 3D</label>
 					<br>
 					<div class="hd_setting">
