check aliases when adding models

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 					<div><div title="Whether or not the mouth/head moves when using voice chat.">Animated Mouth:</div><div class="has_mouth">???</div></div>
 					<div><div title="Whether or not textures and animations are stored in separate model files.">External Models:</div><div class="ext_mdl">???</div></div>
 					<div><div title="Hash result after merging external models, if they exist.">MD5:</div><div class="md5">???</div></div>
-					<div><div title="The name this model had when it was compiled.">Internal Name:</div><div class="compilename">???</div></div>
+					<div><div title="The name this model had when it was compiled. This often has no relation to the model, but can sometimes be used to figure out which model was used as a base.">Internal Name:</div><div class="compilename">???</div></div>
 					<div><div title="Other names that this model has been distributed with. Server owners have been known to rename models. I'll also rename a newly released model if the author's intended name is already in use.">Known Aliases:</div><div class="aliases">???</div></div>
 					<div class="sound_table_row"><div title="Sounds that play during animations.">Sounds:</div><div class="sounds">???</div></div>					
 				</div>
