--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@
 		
 		<div class="filter-types">
 			<input type="checkbox" id="filter_ver">
-			<label for="filter_ver" title="Show only the latest version for each model. This only works for models that use the '_v2' style suffixes. Modellers sometimes use '_v2' for different clothes/colors, too.">Hide old versions</label>
+			<label for="filter_ver" title="Hides previous/broken versions of models. Model versions that look significantly different are not hidden (e.g. touhou_clownpiece -> touhou_clownpiece_v2).">Hide old versions</label>
 			<br>
 			<input type="checkbox" id="filter_group">
-			<label for="filter_group" title="Group models that are of the same character, or that look very similar">Group alternate versions</label>
+			<label for="filter_group" title="Groups models that are of the same character, or that look very similar. Reskins and minor edits to the same model are also grouped.">Group alternate versions</label>
 		</div>
 		<div class="filter-search">
 			<span class="search-text"><input id="name-filter" type="text" placeholder="Search..."/></span>
