--- a/index.html
+++ b/index.html
@@ -328,6 +328,20 @@
 				font-size: 20px;
 			}
 			
+			.download-but-container {
+				margin-top: 20px;
+				text-align: center;
+			}
+			.download-but {
+				background: #070;
+				display: inline-block;
+				padding: 10px 15px;
+				border: 2px solid #0f8;
+				border-radius: 12px;
+				cursor: pointer;
+				user-select: none;
+			}
+			
 			.loader {
 			  color: #ffffff;
 			  font-size: 4px;
@@ -417,6 +431,8 @@
 		
 		<script type="text/javascript" src="modeldb.js"></script>
 		<script async type="text/javascript" src="hlms.js"></script>
+		<script async type="text/javascript" src="jszip.min.js"></script>
+		<script async type="text/javascript" src="FileSaver.js"></script>
 	</head>
 	<textarea class="debug hidden"></textarea>
 	
@@ -512,6 +528,10 @@
 					<div><div title="Other names that this model has been distributed with. Server owners have been known to rename models. I'll also rename a newly released model if the author's intended name is already in use.">Known Aliases:</div><div class="aliases">???</div></div>
 					<div class="sound_table_row"><div title="Sounds that play during animations.">Sounds:</div><div class="sounds">???</div></div>					
 				</div>
+				<div class="download-but-container">
+					<div class="download-but">Download model</div>
+				</div>
+				
 				<div class="model-controls">
 					<input type="checkbox" id="3d_on">
 					<label for="3d_on" title="Enable the 3D model renderer">Render 3D</label>
