update models and about page

--- a/about.html
+++ b/about.html
@@ -51,32 +51,44 @@
 				The in-game model browser is buggy and hard to use.
 				Use this site instead to find a model, then use it in game
 				by typing a model command in console (example: "model betagordon").
-				You can click on a model's name to copy its model command to the clipboard.
-			</p>
-
-			<p>
-				You might notice models with a lot of polygons lag when you try to view them on this site.
-				The same thing happens in game when lots of people use high-poly models.
-				Try not to use a model with more than about 2,000 polygons if you play on a server with a high player count (20+).
-				Models that let you choose colors also have a significant performance hit.
+				You can click on a model's name to copy its name to the clipboard.
 			</p>
 			
 			<p>
-				I want to add a model uploader here eventually, but until then I'm just gonna copy stuff from <a href="https://gamebanana.com/skins/games/54">GameBanana</a> every few months or so.
+				This site is a combination of various packs and single releases. There are often conflicts where models
+				have the same names. I try to add version suffixes properly but might not always get that right.
+				If I can't compare modified dates, then I check the animations to see which version should be the latest.
+			</p>
+			
+			<p>
+				<a href="https://github.com/wootguy/scmodels">Source code for this site</a>
 			</p>
 			
 			<h2>Model Names</h2>
 			<p>
-				A lot of people copy-paste models and then rename them. These models then get included in packs and distributed.
-				Because of this, I don't know if any of the model names here are correct. Let me (w00tguy) know if a model name is wrong and I'll fix it.
+				People often copy-paste models and then rename them. These renamed models then get distributed in model packs.
+				Because of this, I don't know if any of the model names here are correct. <a href="https://github.com/wootguy/scmodels/issues/new">Let me know</a>
+				if a model name is wrong and I'll fix it (preferably with some proof like a GameBanana link).
 			</p>
 			
-			<h2>Links</h2>
+			<p>
+				Some recently released models have names that conflict with older models. I renamed those models.
+				For instance, this <a href="https://gamebanana.com/mods/167133">Touhou Momiji</a> model overwrites
+				the low definition version of that model. So, I renamed the new one to "kz_touhou_momiji".
+				There are <a href="conflicts.txt">many other</a> cases like this.
+				You can also see previous model names in the "Known Aliases" section of the model viewer.
+			</p>
+			
+			<h2>Model sources</h2>
 			<p>
 				<ul>
-				<li><a href="https://distfiles.lifeisabug.com/svencoop/playermodels/svencoop_addon.7z">Huge player model pack</a> (<a href="https://twlz.lifeisabug.com/">TWLZ</a>)</li>
-				<li><a href="https://github.com/wootguy/scmodels">Source code for this site</a></li>
-				<li><a href="https://github.com/wootdata?tab=repositories">Model file repositories</a></li>
+					<li><a href="https://gamebanana.com/mods/cats/7276">GameBanana</a></li>
+					<li><a href="https://www.moddb.com/mods/sven-co-op/addons">ModDB</a></li>
+					<li><a href="https://distfiles.lifeisabug.com/svencoop/playermodels/svencoop_addon.7z">TWLZ player model pack</a> (<a href="https://twlz.lifeisabug.com/">TWLZ</a>)</li>
+					<li><a href="https://drive.google.com/drive/folders/1ZsBwMEqTYDEsjDT1WcQUu-zTIEgBCNuY">Uber Pack Redux</a></li>
+					<li><a href="https://drive.google.com/drive/folders/1QEaqIxKET4_QUo7PurNI-z5DKj8vijqf">snrk's Playermodel pack</a></li>
+					<li><a href="http://wwww.letonguesc.com/svencoop/models/player/">LeTongue FastDL server</a></li>
+					<li>whatever I had in svencoop_downloads/models/player/</li>
 				</ul>
 			</p>
 		</div>
