--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 				Some recently released models have names that conflict with older models. I renamed those models.
 				For instance, this <a href="https://gamebanana.com/mods/167133">Touhou Momiji</a> model overwrites
 				the low definition version of that model. So, I renamed the new one to "kz_touhou_momiji".
-				There are <a href="conflicts.txt">many other</a> cases like this.
+				There are <a href="database/conflicts.txt">many other</a> cases like this.
 				You can also see previous model names in the "Known Aliases" section of the model viewer.
 			</p>
 			
