--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				text-align: center;
 				margin-bottom: 5px;
 			}
-			.about-link {
-				display: block;
+			.header-links {
 				text-align: center;
-				margin: 0 auto;
-				width: max-content;
+			}
+			.about-link {
+				padding: 0 15px;
 			}
 			.last-update-time {
 				display: block;
@@ -444,7 +444,11 @@
 	
 	<body>
 		<h1>Sven Co-op Model Database</h1>
-		<a class="about-link" href="about.html">About</a>
+		<div class="header-links">
+			<a class="about-link" href="index.html">Home</a>
+			<a class="about-link" href="about.html">About</a>
+			<a class="about-link" href="download.html">Model packs</a>
+		</div>
 		<hr>
 		
 		<div class="loader site-loader"></div>
