update model packs

--- a/download.html
+++ b/download.html
@@ -51,15 +51,15 @@
 		
 		<div class="about-text">
 			<h2>Latest models</h2>
-			<a href="https://drive.google.com/u/0/uc?id=1IgZZYWhjdui3bgeVisf0Td7ajd7cU5oc&export=download">latest_models_2022_12_19.7z</a> (8837 models, 2.3 GB download, 13.7 GB extracted)
+			<a href="https://drive.google.com/u/0/uc?id=18moin1NN8mP7bt7RmtX59VUUIwPT8lLf&export=download">latest_models_2023_06_12.7z</a> (9029 models, 2.4 GB download, 14.2 GB extracted)
 			
 			<p>
 				This model pack contains only the latest version of each model. This is the pack you want
-				if you play on twilightzone. Otherwise, you may still see missing models because of players using different
+				if you play on server with the .hipoly plugin (twilightzone). Otherwise, you may still see missing models because of players using different
 				model names.
 			</p>
 			<h2>All models</h2>
-			<a href="https://drive.google.com/u/0/uc?id=1G9-_P1mPq3Z2ipRpZwIMHnmWn6ajoC2Q&export=download">all_models_2022_12_19.7z</a> (10511 models, 2.4 GB download, 16.1 GB extracted)
+			<a href="https://drive.google.com/u/0/uc?id=1RXL3E6YeVXPEYYGE4d1tVk0Mt5yGOqmg&export=download">all_models_2023_06_12.7z</a> (10739 models, 2.5 GB download, 16.7 GB extracted)
 			<p>
 				This pack includes all models in this database. It should fix more missing models if you play on a
 				server that doesn't enforce the latest "official" model names.
